Initial css draft

--- a/p1.css
+++ b/p1.css
@@ -50,7 +50,7 @@
     font-size: 80%;
 }
 
-/* start of desert pic*/
+/* /* start of desert pic */
 
 #divpic {
     height: 30%;
@@ -124,3 +124,4 @@
 #cities li a:hover {
     color: red;
 }
+/* the boy*/
